--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- 开发时 -->
-    <script src="http://localhost:8080/calculator-app.bundle.js"></script>
+    <!-- <script src="http://localhost:8080/calculator-app.bundle.js"></script> -->
 
     <!-- 部署时 -->
     <!-- <script src="./dist/calculator-app.bundle.js"></script> -->
