--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="root"></div>
     <!-- 开发时 -->
     <!-- <script src="http://localhost:8080/calculator-app.bundle.js"></script> -->
 
